--- a/ParkMobileServer/park-mobile-ssr/package.json
+++ b/ParkMobileServer/park-mobile-ssr/package.json
@@ -21,7 +21,7 @@
     "gsap": "^3.12.5",
     "jotai": "^2.10.2",
     "lodash": "^4.17.21",
-    "next": "^15.1.1-canary.17",
+    "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
