--- a/ParkMobileServer/docker-compose.yml
+++ b/ParkMobileServer/docker-compose.yml
@@ -34,9 +34,11 @@ services:
       dockerfile: Dockerfile
     container_name: nextjs-client
     ports:
-      - "3000:3000"
+      - "80:80"
     depends_on:
       - web
+    environment:
+      - PORT=80
 
 volumes:
   postgres-data:
