--- a/ParkMobileServer/park-mobile-ssr/Dockerfile
+++ b/ParkMobileServer/park-mobile-ssr/Dockerfile
@@ -10,6 +10,7 @@ COPY --from=build /app/.next ./.next
 COPY --from=build /app/package*.json ./
 COPY --from=build /app/public ./public
 COPY --from=build /app/next.config.ts ./
+ENV PORT 80
 RUN npm install --omit=dev
-EXPOSE 3000
+EXPOSE 80
 CMD ["npm", "start"]
