--- a/ParkMobileServer/park-mobile-ssr/package.json
+++ b/ParkMobileServer/park-mobile-ssr/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "devTest": "next dev --experimental-https",
     "build": "next build",
-    "start": "PORT=80 next start",
+    "start": "next start",
     "lint": "next lint",
     "firebaseDeploy": "firebase deploy",
     "export": "next build && next export",
