--- a/ParkMobileServer/appsettings.json
+++ b/ParkMobileServer/appsettings.json
@@ -8,7 +8,8 @@
   "ConnectionStrings": {
     "PostgreSQLConnection": "Server=localhost;Database=parkmobile;Port=5432;UserId=postgres;Password=94monizi;",
     "PostgreWorkConnection": "Server=localhost;Database=postgres;Port=5432;UserId=postgres;Password=94monizi;",
-    "DefaultConnection": "Host=db;Port=6001;Database=parkmobile;Username=postgres;Password=94monizi"
+    "DefaultConnection": "Host=db;Port=6001;Database=parkmobile;Username=postgres;Password=94monizi",
+    "Redis": "redis-cache:6379"
   },
   "AllowedHosts": "*",
   "JwtSecret":  "qwerasdfnvrjthowqirtngjkwetngkjlwnvkasdfjkwerg8qrjf"
