--- a/ParkMobileServer/docker-compose.yml
+++ b/ParkMobileServer/docker-compose.yml
@@ -11,11 +11,20 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
+      - app-network
+
+  redis:
+    image: redis:latest
+    container_name: redis-cache
+    ports:
+      - "6379:6379"
+    networks:
       - app-network # Подключение к общей сети
+    command: ["redis-server", "--save", "60", "1", "--loglevel", "warning"]
 
   web:
     build:
-      context: ./ # Путь к директории с Dockerfile вашего ASP.NET приложения
+      context: ./
       dockerfile: Dockerfile
     container_name: aspnet-api
     ports:
