--- a/ParkMobileServer/park-mobile-ssr/package.json
+++ b/ParkMobileServer/park-mobile-ssr/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.59.16",
     "antd": "^5.22.2",
     "axios": "^1.7.7",
+    "colorthief": "^2.6.0",
     "gsap": "^3.12.5",
     "jotai": "^2.10.2",
     "lodash": "^4.17.21",
