--- a/ParkMobileServer/docker-compose.yml
+++ b/ParkMobileServer/docker-compose.yml
@@ -13,6 +13,15 @@ services:
     networks:
       - app-network # Подключение к общей сети
 
+  redis:
+    image: redis:latest
+    container_name: redis-cache
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network # Подключение к общей сети
+    command: ["redis-server", "--save", "60", "1", "--loglevel", "warning"]
+
   web:
     build:
       context: ./ # Путь к директории с Dockerfile вашего ASP.NET приложения
@@ -22,6 +31,7 @@ services:
       - "3001:3001"
     depends_on:
       - db
+      - redis
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=parkmobile;Username=postgres;Password=94monizi
