--- a/ParkMobileServer/park-mobile-ssr/package.json
+++ b/ParkMobileServer/park-mobile-ssr/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
+    "@microsoft/signalr": "^8.0.7",
     "@pbe/react-yandex-maps": "^1.2.5",
     "@tanstack/react-query": "^5.59.16",
     "antd": "^5.22.2",
